# Reconstruction-of-medical-QA-system

./: .gitignore  README.md  docker-compose.yml  package-lock.json
db/migrations/: 001_init.sql  002_mysql_users.sql  003_mysql_chat_messages.sql  004_knowledge_tables.sql  005_agent_traces.sql
docs/: api-spec.yaml  项目完整的流程.md  项目规范.md  项目设计更新.md
frontend/: .env.development  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
java-gateway/: pom.xml
openspec/: config.yaml
python-agent/: Dockerfile  pyproject.toml  requirements.txt  test_curl.py  test_inference.py
python-agent/alembic/: env.py
python-agent/alembic/versions/: 001_init.py  002_notnull_constraints.py  543e5b7ec2eb_add_agent_traces_table.py
python-agent/app/: main.py
python-agent/app/api/v1/: chat.py  knowledge.py
python-agent/app/core/: config.py  security.py
python-agent/app/db/: models.py  pgvector_client.py  vector_store.py
python-agent/app/mcp/: __init__.py
python-agent/app/mcp/clients/: audit_client.py  memory_client.py  retrieval_client.py  user_client.py
python-agent/app/mcp/servers/: retrieval_server.py
python-agent/app/schemas/: chat.py  common.py
python-agent/app/services/: agent_service.py  context_builder.py  embedding_service.py  gatekeeper_service.py  keyword_engine.py  llm_service.py  reranker_service.py  retrieval_service.py  trace_context.py  verification_service.py
python-agent/app/services/prompts/: clarify.j2  history_chat.j2  simple_qa.j2
python-agent/tests/: test_chat.py  test_mcp_integration.py
(+54 files in other folders)
