[project]
name = "rag-python-agent"
version = "0.1.0"
description = "Python FastAPI inference engine for RAG system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "pika>=1.3.2",
    "sqlalchemy[asyncio]>=2.0.25",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "mcp>=1.0.0",
    "asyncpg>=0.31.0",
    "python-docx>=1.2.0",
    "pymupdf>=1.27.2.3",
    "langchain-text-splitters>=1.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
